[package]
name = "fixnum"
version = "0.5.1"
description = "Fixed-point numbers with explicit rounding"
keywords = ["fixed", "decimal", "numbers"]
authors = ["Paul Loyd <pavelko95@gmail.com>"]
repository = "https://github.com/loyd/fixnum"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
categories = ["no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "fixed_point"
path = "benches/fixed_point.rs"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
typenum = "1.12.0"
derive_more = { version = "0.99.9", default-features = false }
parity-scale-codec = { version = "2", default-features = false, optional = true, features = ["derive"] }
static_assertions = "1.1.0"

[dev-dependencies]
anyhow = { version = "1.0.38", default-features = false }
criterion = "0.3.3"
derive_more = "0.99.9"
trybuild = "1.0.39"

[features]
default = ["std", "serde"]
std = ["derive_more/error"]
i128 = []
parity = ["parity-scale-codec"]
