[package]
name = "fixnum"
version = "0.8.0"
description = "Fixed-point numbers with explicit rounding"
keywords = ["fixed", "decimal", "numbers"]
authors = ["Paul Loyd <pavelko95@gmail.com>"]
repository = "https://github.com/loyd/fixnum"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
categories = ["no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "fixed_point"
path = "benches/fixed_point.rs"
harness = false

[[bench]]
name = "serde"
path = "benches/serde.rs"
harness = false
required-features = ["serde"]

[[example]]
name = "usage"
path = "examples/usage.rs"
required-features = ["i64"]

[features]
default = ["std"]
std = ["derive_more/error"]
i16 = []
i32 = []
i64 = []
i128 = []
serde = ["dep:serde"]
parity = ["parity-scale-codec"]
quick-xml = ["serde?/derive", "serde?/alloc"] # FIXME: quick-xml#473

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
typenum = "1.12.0"
derive_more = { version = "0.99.9", default-features = false }
parity-scale-codec = { version = "3", default-features = false, optional = true }
static_assertions = "1.1.0"
itoa = "1.0.1"

[dev-dependencies]
anyhow = { version = "1.0.38", default-features = false }
colored = "2.0.0"
criterion = "0.3.3"
derive_more = "0.99.9"
trybuild = "1.0.39"
serde_json = "1"
proptest = "1.0.0"
rust_decimal = "1.22.0"
quick-xml = { version = "0.24.0", features = ["serialize"] }
serde = { version = "1.0", default-features = false, features = ["derive"] } # FIXME: quick-xml#473
