[package]
name = "fixnum"
version = "0.9.2"
description = "Fixed-point numbers with explicit rounding"
keywords = ["fixed", "decimal", "numbers"]
authors = ["Paul Loyd <pavelko95@gmail.com>"]
repository = "https://github.com/loyd/fixnum"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
categories = ["no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "ops"
path = "benches/ops.rs"
harness = false

[[bench]]
name = "serde"
path = "benches/serde.rs"
harness = false
required-features = ["serde"]

[[example]]
name = "usage"
path = "examples/usage.rs"
required-features = ["i64"]

[features]
default = ["std"]
std = ["derive_more/error"]
i16 = []
i32 = []
i64 = []
i128 = ["dep:i256"]
serde = ["dep:serde"]
schemars = ["dep:schemars"]
parity = ["parity-scale-codec"]
quick-xml = ["serde?/derive", "serde?/alloc"] # FIXME: quick-xml#473

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
schemars = { version = "0.8", default-features = false, optional = true }
typenum = "1.12.0"
derive_more = { version = "0.99.9", default-features = false }
parity-scale-codec = { version = "3", default-features = false, optional = true }
static_assertions = "1.1.0"
itoa = "1.0.1"
i256 = { version = "=0.1.1", default-features = false, optional = true }

[dev-dependencies]
anyhow = { version = "1.0.38", default-features = false }
colored = "2.0.0"
criterion = "0.5"
derive_more = "0.99.9"
trybuild = "1.0.85"
serde_json = "1"
proptest = "1.0.0"
rust_decimal = "1.22.0"
quick-xml = { version = "0.24.0", features = ["serialize"] }
serde = { version = "1.0", default-features = false, features = ["derive"] } # FIXME: quick-xml#473
